--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,10 @@ defaults:
       type: "products"
     values:
       layout: "default"
+      stylesheets:
+        - https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css
+      scripts:
+        - https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js
 
 collections:
   products:
