--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ defaults:
       path: ""
       type: "products"
     values:
-      layout: "default"
+      layout: "product"
       stylesheets:
         - https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css
       scripts:
@@ -49,6 +49,7 @@ defaults:
 collections:
   products:
     output: true
+    permalink: /:collection/:name
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
